fix preloader z-index

--- a/src/scss/components/_list-movie.scss
+++ b/src/scss/components/_list-movie.scss
@@ -3,6 +3,10 @@
   flex-wrap: wrap;
 }
 .card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
   width: 350px;
   // height: 600px;
   margin-right: 10px;
@@ -11,6 +15,11 @@
   border: none;
   border-radius: 5px;
   background-color: #281f55;
+
+  .card-img-top {
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
+  }
 }
 
 .card-title {
